--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "json-simple-1.1.1.jar",
-        "librerias/json-simple-1.1.1.jar"
+        "librerias/json-simple-1.1.1.jar",
+        "librerias/json-20220320.jar",
+        "librerias/json.jar"
     ]
 }
